--- a/yaml/addorg_crypto.yaml
+++ b/yaml/addorg_crypto.yaml
@@ -1,11 +1,10 @@
+
+
 PeerOrgs:
   - Name: -OrgIDForReplace-
     Domain: -OrgIDForReplace-.-DomainForReplace-
-    CA:
-       Hostname: ca
+    EnableNodeOUs: true
     Template:
       Count: 2
-      SANS:
-        - -CAIpForReplace-
     Users:
       Count: 1
