--- a/yaml/cli_demo.yaml
+++ b/yaml/cli_demo.yaml
@@ -5,8 +5,8 @@ networks:
 
 services:
 
-  -OrgIDForReplace-cli:
-    container_name: -OrgIDForReplace-cli
+  -OrgCliForReplace-:
+    container_name: -OrgCliForReplace-
     image: hyperledger/fabric-tools
     privileged: true
     stdin_open: true
@@ -16,7 +16,7 @@ services:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_LOGGING_LEVEL=DEBUG
       - CORE_PEER_TLS_ENABLED=True
-      - CORE_PEER_ID=-OrgIDForReplace-cli
+      - CORE_PEER_ID=-OrgCliForReplace-
       - CORE_PEER_ADDRESS=peer0.-OrgIDForReplace-.-DomainForReplace-:7051
       - CORE_PEER_LOCALMSPID=-OrgIDForReplace-
       - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/-OrgIDForReplace-.-DomainForReplace-/peers/peer0.-OrgIDForReplace-.-DomainForReplace-/tls/server.crt
@@ -27,10 +27,12 @@ services:
     command: /bin/bash -c 'sleep 10000'
     volumes:
         - /var/run/:/host/var/run/
+        - /var/certification/efe73f3dd0450bc689f0c9671b000cce/twoOrg:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
         - -CryptoPathForReplace-:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-#    depends_on:
-#      - peer0.-OrgIDForReplace-.-DomainForReplace-
+#########ExistOrgList
+
     extra_hosts:
-      - -OrderDomainForReplace-:-OrderIPForReplace-
+#########ExtraList
+
     networks:
       - default
